# drf-doc-tutorial

./: pyproject.toml
drf_tutorial/drf_tutorial/: settings.py  urls.py
drf_tutorial/snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
